Tue Aug 14 15:32:08 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c libxslt/transform.c: trying to kill bug #58878,
	  some associated serious cleanup in the pattern code.
	* tests/docbook/result/*: regenerated all the results for the
	  docbook testsuite. Seems killing #58878 also changes the
	  fo results seriously.
	* tests/docs/Makefile.am tests/docs/bug-5[56].xml 
	  tests/general/Makefile.am tests/general/bug-5[56].*: added
	  2 more tests

Tue Aug 14 05:01:30 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libxslt/xslt.c libxslt/xsltInternals.h libxslt/transform.c
	  libxslt/extra.[ch] libxslt/extensions.c libxslt/preproc.[ch]:
	  fixed compilation warnings due to recent changes to the extension
	  framework.
	* libxslt/preproc.[ch] libexslt/common.c
	  fixed the precomputation of *:document elements
	* libxslt/functions.h: fixed a compilation warning

Mon Aug 13 11:41:02 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.c: applied fix suggested by Tom Moog
	  for xsltTimeStamp() in bug report #58012

Sun Aug 12 21:53:13 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/functions.c libxslt/keys.c libxslt/transform.c 
	  libxslt/xsltutils.h: cleaned up the code w.r.t. handling
	  of 'non-standard' libxml element like namespace nodes.
	* tests/docs/Makefile.am tests/docs/bug-54.xml
	  tests/general/Makefile.am tests/general/bug-54.*: added a 
	  specific example in the regression tests

Wed Aug  8 22:57:05 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* HACKING: added John Fleck right to commit in the doc subdir

Tue Aug  7 03:11:31 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: for heriting defaulted atts from the DTD
	* tests/docs/Makefile.am tests/docs/bug-52.xml tests/docs/bug-53.xml
	  tests/general/Makefile.am tests/general/bug-52.*
	  tests/general/bug-53.*: Added a few new tests for recently fixed
	  stuff in libxml
	* tests/xmlspec/REC-xml-20001006-review.html