@@ -1,3 +1,14 @@
+Tue Aug 14 18:41:02 CEST 2001 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/extra.c libxslt/keys.c libxslt/templates.c 
+	  libxslt/transform.c libxslt/variables.c libxslt/xsltutils.c:
+	  serious changes on Result Value Trees and NodeSets
+	  w.r.t. deallocation and collect operations. Probably not
+	  100% clean (merge of allocated trees smells like a problem).
+	  Seems sufficient to close #58943 . Also check if XPath evaluations
+	  failed, and in this case stops the processing and avoid
+	  going further, goal is to not segfault on broken XSLT.
+
 Tue Aug 14 15:32:08 CEST 2001 Daniel Veillard <daniel@veillard.com>
 
 	* libxslt/pattern.c libxslt/transform.c: trying to kill bug #58878,
